--- a/_posts/2020-08-7-海鲜市场淘货之大战企业监管机.md
+++ b/_posts/2020-08-7-海鲜市场淘货之大战企业监管机.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: null
 title:  "海鲜市场淘货之大战企业监管机"
 date:   2020-08-07 22:33:00 +0800
 categories: 
@@ -45,6 +45,6 @@ WTF
 ![jgj6](../library/2020-08/jgj6.png)
 算了算了，这么好的电脑，只是在他高贵的屏幕上有一个不可修复的小坑而已不算什么，不算什么，又不影响使用啦！当然是选择   **退掉它\!\!\!**
 ![jgj4](../library/2020-08/jgj4.png)
----
+
 
 *乖乖去apple store买了，14999离我而去，5555～垃圾海鲜市场，浪费我青春*
