feat: async some old post

--- a/_posts/2020-11-8-前端速查自用.md
+++ b/_posts/2020-11-8-前端速查自用.md
@@ -1,26 +1,21 @@
 ---
 layout: post
-title:  "前端基础"
-date:   2021-11-8 10:56:00 +0800
+title:  "前端速查自用"
+date:   2020-11-8 10:56:00 +0800
 categories: 
 ---
 
 ## HTML
 
 1. **系统结构**
-- B/S架构
-    
-    Browser / Server
-    
-- C/S架构
-    
-    Client / Server
-    
-    *企业一般用B/S架构*
-    
-    *游戏 、APP等用C/S架构*
-    
+    - B/S架构
+        Browser / Server
+    - C/S架构
+        Client / Server
 
+        *企业一般用B/S架构*
+        
+        *游戏 、APP等用C/S架构*  
 ---
 
 - ASP是Active Server Page的缩写，意为“活动服务器网页”，ASP的网页文件的格式是.asp，现在常用于各种动态网站中。与HTML相比，ASP网页具有6大特点。
