fix: some img_url

--- a/_posts/2020-11-8-前端速查自用.md
+++ b/_posts/2020-11-8-前端速查自用.md
@@ -357,15 +357,15 @@ console.log(JSON.stringify(result)); // 打印结果：["a","b","c",1,2,3]
 
 ```jsx
 example 排序前的数组：[
-    {"title":"品牌鞋子，高品质低价入手","publishTime":200},
-    {"title":"不是很贵，但是很暖","publishTime":100},
-    {"title":"无法拒绝的美食，跟我一起吃吃","publishTime":300}
+    {"title":"窗前明月光","publishTime":200},
+    {"title":"疑是地上霜","publishTime":100},
+    {"title":"举头望明月","publishTime":300}
 ]
 
 example 排序后的数组：[
-    {"title":"不是很贵，但是很暖","publishTime":100},
-    {"title":"品牌鞋子，高品质低价入手","publishTime":200},
-    {"title":"无法拒绝的美食，跟我一起吃吃","publishTime":300}
+    {"title":"疑是地上霜","publishTime":100},
+    {"title":"窗前明月光","publishTime":200},
+    {"title":"举头望明月","publishTime":300}
 ]
 ```
 
@@ -374,7 +374,7 @@ example 排序后的数组：[
 - 将一个字符串数组输出为`|`分割的形式
 
 ```jsx
-var arr = ['许嵩', '宿敌', '素颜'];
+var arr = ['jay', 'gem', 'jj'];
 
 console.log(arr.join('|'));
 ```
@@ -530,8 +530,8 @@ console.log(arr.join('|'));
 现在有了 ES6 语法，字符串拼接可以这样写：
 
 ```jsx
-var name = 'smyhvae';
-    var age = '26';
+var name = 'Taylor';
+    var age = '18';
 
     console.log('name:'+name+',age:'+age);   //传统写法
 
