--- a/_posts/2022-10-31-Git常用命令速查.md
+++ b/_posts/2022-10-31-Git常用命令速查.md
@@ -5,13 +5,13 @@ date:   2022-10-30 19:00:00 +0800
 categories: 
 ---
 
-Git官网：https://git-scm.com/
+Git官网：[https://git-scm.com/](https://git-scm.com/)
 
-官方文档：https://git-scm.com/docs
+官方文档：[https://git-scm.com/docs](https://git-scm.com/docs)
 
-全部命令： https://git-scm.com/docs/git#_git_commands
+全部命令： [https://git-scm.com/docs/git#_git_commands](https://git-scm.com/docs/git#_git_commands)
 
-GitHub Cheat Sheet：https://training.github.com/
+GitHub Cheat Sheet：[https://training.github.com/](https://training.github.com/)
 
 ## 创建仓库
 
