--- a/_posts/2022-10-31-Git常用命令速查.md
+++ b/_posts/2022-10-31-Git常用命令速查.md
@@ -9,6 +9,8 @@ Git官网：[https://git-scm.com/](https://git-scm.com/)
 
 官方文档：[https://git-scm.com/docs](https://git-scm.com/docs)
 
+阮一峰整理：[https://www.ruanyifeng.com/blog/2015/12/git-cheat-sheet.html](https://www.ruanyifeng.com/blog/2015/12/git-cheat-sheet.html)
+
 全部命令： [https://git-scm.com/docs/git#_git_commands](https://git-scm.com/docs/git#_git_commands)
 
 GitHub Cheat Sheet：[https://training.github.com/](https://training.github.com/)
