fix: Optimized naming

--- a/_posts/2020-08-21-mac企业监管机屏蔽弹窗.md
+++ b/_posts/2020-08-21-mac企业监管机屏蔽弹窗.md
@@ -1,9 +1,14 @@
 ---
 layout: post
-title:  "mac企业监管机屏蔽弹窗"
+title:  "Mac企业监管机屏蔽弹窗"
 date:   2020-08-21 17:33:00 +0800
 categories: 
 ---
+
+曾在某鱼购买mac被坑，买到企业监管机，虽然已经成功退货，但当时用那台机器折腾了下成功屏蔽了监管机弹窗，方法分享给有需要的人。
+
+（TIPS: mac重装系统可以发现是不是监管机，大家买二手建议仔细甄别，尽量避免被忽悠，浪费时间和精力。）
+
 1. 解除系统的rootless限制，即SIP（system integrity protection）系统完整性保护。
 方法是：关机，按住【Cmd+R】键重启，进入recovery恢复模式，在菜单【实用工具】中打开终端，输入`csrutil disable`禁用它，然后查看`csrutil status`是否已经禁用成功，然后退出重启（输入`reboot`）,重新启动 。
 
