update the git post

--- a/_posts/2022-10-31-Git常用命令速查.md
+++ b/_posts/2022-10-31-Git常用命令速查.md
@@ -452,3 +452,11 @@ git commit -m 'update .gitignore'
 ```$ git rm —cached -r [file]```
 
 停止追踪指定文件，但该文件会保留在工作区
+
+## commit之后git自动将lf转换成crlf，导致行末eslint飘黄
+
+修改git全局配置，禁止git自动将lf转换成crlf
+
+```bash
+git config --global core.autocrlf false
+```
