--- a/_posts/2020-11-08-前端速查自用.md
+++ b/_posts/2020-11-08-前端速查自用.md
@@ -555,7 +555,7 @@ var name = 'Taylor';
 1. 创建虚拟DOM时，不要写引号；
 2. 标签中要混入js表达式，要是用{}
 3. 标签中样式的类名要用className指定
-4. 标签中的内联样式要用style={{color:'white'}}，注意属性名转为小驼峰
+4. 标签中的内联样式要用`style=\{\{color:'white'\}\}`，注意属性名转为小驼峰
 5. 只能有一个根标签
 6. 标签必须闭合
 7. 关于标签首字母
