--- a/_posts/2023-02-28-eNSP-ERR40.md
+++ b/_posts/2023-02-28-eNSP-ERR40.md
@@ -5,7 +5,12 @@ date:   2023-02-28 18:00:00 +0800
 categories: 
 ---
 
-> 环境：Win11
+> 环境：<br>
+Windows11 x64 22H2<br>
+WinPcap-4.1.3<br>
+Wireshark-2.6.4<br>
+VirtualBox-5.2.26<br>
+eNSP V100R003C00SPC100
 
 如果eNSP安装后，虚拟设备无法启动报错 `错误代码：40`
 
@@ -29,10 +34,11 @@ $ bcdedit
 2. 解决方法：关闭 Hyper-V 后 VirtualBox 与 eNSP 均可正常使用
 
 ```bash
+// 需使用管理员权限shell运行
 
 // 关闭 Hyper-V
 $ bcdedit /set hypervisorlaunchtype off
 
 // 开启 Hyper-V
-bcdedit /set hypervisorlaunchtype auto
+$ bcdedit /set hypervisorlaunchtype auto
 ```
